# zashterm

./: README.md  default.nix  flake.nix  install.sh  pyproject.toml
.github/workflows/: packages.yml
locale/: bg.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
pkgbuild/: PKGBUILD
src/zashterm/: __init__.py  __main__.py  app.py  helpers.py  window.py
src/zashterm/core/: __init__.py  signals.py  tasks.py
src/zashterm/data/: ai_history_manager.py  command_manager_models.py
src/zashterm/data/styles/: ai_chat_panel.css  components.css  dialogs.css  window.css
src/zashterm/filemanager/: manager.py  models.py  operations.py  transfer_dialog.py  transfer_manager.py
src/zashterm/sessions/: models.py  operations.py  results.py  storage.py  tree.py  validation.py
src/zashterm/settings/: config.py  highlights.py  manager.py
src/zashterm/state/: window_state.py
src/zashterm/terminal/: _highlighter_impl.py  ai_assistant.py  manager.py  spawner.py  tabs.py
src/zashterm/terminal/highlighter/: __init__.py  constants.py  proxy.py  (+3 more)
src/zashterm/ui/: actions.py  color_scheme_dialog.py  colors.py  menus.py  sidebar_manager.py  ssh_dialogs.py  window_ui.py
src/zashterm/utils/: backup.py  crypto.py  exceptions.py  icons.py  logger.py  osc7.py  osc7_tracker.py  platform.py  security.py  ssh_config_parser.py  syntax_utils.py  tooltip_helper.py  translation_utils.py
usr/share/applications/: io.github.leoberbert.zashterm.desktop
(+22 files in other folders)
